# porypal-fe8

./: LICENSE  README.md  palette_tool.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
tests/: check_pal.py  gen_test_png.py  test_palette_tool.py
